--- a/About.html
+++ b/About.html
@@ -1,10 +1,7 @@
-﻿<%@ Page Language="C#" AutoEventWireup="true" CodeFile="About.html.cs" Inherits="About" %>
-
-<!DOCTYPE html>
-
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head id="Head1" runat="server">
-          <title>About us - ASPEN ENGINEERING</title>
+<head>
+              <title>About us - ASPEN ENGINEERING</title>
           <meta charset="utf-8"/>
           <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
           <meta content="" name="keywords"/>
@@ -18,10 +15,9 @@
           <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet"/>
           <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet"/>
           <link href="css/style.css" rel="stylesheet"/>
-    </head>
+</head>
 <body>
-    <form id="form1" runat="server">
-        <header id="header">
+     <header id="header">
             <div class="container-fluid">
 
               <div id="logo" class="pull-left">
@@ -248,6 +244,5 @@
 
       <!-- Template Main Javascript File -->
       <script src="js/main.js"></script>
-        </form>
-    </body>
+</body>
 </html>
