--- a/Projects.html
+++ b/Projects.html
@@ -1,25 +1,23 @@
-﻿<%@ Page Language="C#" AutoEventWireup="true" CodeFile="Projects.html.cs" Inherits="Projects" %>
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head id="Head1" runat="server">
-          <title>Projects - ASPEN ENGINEERING</title>
-          <meta charset="utf-8"/>
-          <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-          <meta content="" name="keywords"/>
-          <meta content="" name="description"/>
-          <link href="img/favicon.png" rel="icon"/>
-          <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet"/>
-          <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-          <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
-          <link href="lib/animate/animate.min.css" rel="stylesheet"/>
-          <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet"/>
-          <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet"/>
-          <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet"/>
-          <link href="css/style.css" rel="stylesheet"/>
-    </head>
+<head>
+    <title>Projects - ASPEN ENGINEERING</title>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta content="" name="keywords"/>
+    <meta content="" name="description"/>
+    <link href="img/favicon.png" rel="icon"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet"/>
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="lib/animate/animate.min.css" rel="stylesheet"/>
+    <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet"/>
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet"/>
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
+</head>
 <body>
-    <form id="form1" runat="server">
-      <header id="header">
+     <header id="header">
         <div class="container-fluid">
 
           <div id="logo" class="pull-left">
@@ -31,8 +29,8 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="About.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
-              <%--<li class="menu-active"><a href="Projects.html">Projects</a></li>--%>
-              <li class="menu-has-children"><a href="#">Projects</a>
+              <li class="menu-active"><a href="Projects.html">Projects</a></li>
+              <!--<li class="menu-has-children"><a href="#">Projects</a>
                 <ul>
                   <li><a href="Projects.html">Water Projects</a></li>
                   <li><a href="Projects.html">Grain, and Cement plants</a></li>
@@ -40,7 +38,7 @@
                   <li><a href="Projects.html">Industrial Projects</a></li>
                   <li><a href="Projects.html">Miscellaneous Projects</a></li>
                 </ul>
-              </li>
+              </li>-->
               <li><a href="Careers.html">Careers</a></li>
                 <li><a href="News.html">News</a></li>
               <li><a href="ContactUs.html">Contact Us</a></li>
@@ -65,9 +63,9 @@
         <section id="portfolio"  class="section-bg" >
           <div class="container">
 
-            <%--<header class="section-header">
+            <header class="section-header">
               <h3 class="section-title">Reference list</h3>
-            </header>--%>
+            </header>
 
             <div class="row">
               <div class="col-lg-12">
@@ -154,17 +152,16 @@
                 </div>
                 </div>
 
-                <%---------------------------------------------------------------------------------------------%>
                 <div class="col-lg-4 col-md-6 portfolio-item filter-Grain wow fadeInUp" data-wow-delay="0.2s">
                 <div class="portfolio-wrap">
                   <figure>
                     <img src="img/portfolio/2_3.jpg" class="img-fluid" alt=""/>
                     <a href="img/portfolio/2_3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Industrial solutions" title="Preview"><i class="ion ion-eye"></i></a>
-                    <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                    <a href="Industrial-Projects.html" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                   </figure>
 
                   <div class="portfolio-info">
-                    <h4><a href="#">Industrial solutions</a></h4>
+                    <h4><a href="Industrial-Projects.html">Industrial solutions</a></h4>
                   </div>
                 </div>
               </div>
@@ -197,18 +194,16 @@
                 </div>
               </div>
 
-                <%---------------------------------------------------------------------------------------------%>
-
                 <div class="col-lg-4 col-md-6 portfolio-item filter-Buildings wow fadeInUp">
                 <div class="portfolio-wrap">
                   <figure>
                     <img src="img/portfolio/Hospital_1.jpg" class="img-fluid" alt=""/>
                     <a href="img/portfolio/Hospital_1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Hospitals" title="Preview"><i class="ion ion-eye"></i></a>
-                    <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                    <a href="University-Hospitals.html" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                   </figure>
 
                   <div class="portfolio-info">
-                    <h4><a href="#">Hospitals</a></h4>
+                    <h4><a href="University-Hospitals.html">Hospitals</a></h4>
                   </div>
                 </div>
               </div>
@@ -240,8 +235,6 @@
                   </div>
                 </div>
               </div>
-
-                <%---------------------------------------------------------------------------------------------%>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-Industrial wow fadeInUp">
                 <div class="portfolio-wrap">
@@ -299,8 +292,6 @@
                 </div>
               </div>
 
-                <%---------------------------------------------------------------------------------------------%>
-
                 <div class="col-lg-4 col-md-6 portfolio-item filter-Miscellaneous wow fadeInUp">
                 <div class="portfolio-wrap">
                   <figure>
@@ -334,11 +325,11 @@
                   <figure>
                     <img src="img/portfolio/Bridge_3.jpg" class="img-fluid" alt=""/>
                     <a href="img/portfolio/Bridge_3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Roads and Bridges" title="Preview"><i class="ion ion-eye"></i></a>
-                    <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                    <a href="Bridges.html" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                   </figure>
 
                   <div class="portfolio-info">
-                    <h4><a href="#">Roads and Bridges</a></h4>
+                    <h4><a href="Bridges.html">Roads and Bridges</a></h4>
                   </div>
                 </div>
               </div>
@@ -497,6 +488,5 @@
 
       <!-- Template Main Javascript File -->
       <script src="js/main.js"></script>
-        </form>
-    </body>
+</body>
 </html>
